--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
+  @await RenderSectionAsync("Styles", required: false)
 </head>
 <!-- [Head] end -->
 <!-- [Body] Start -->
@@ -87,15 +88,27 @@
             </a>
           </li>
           <li class="pc-item">
+            <a asp-controller="Ingredients" asp-action="Index" class="pc-link">
+              <span class="pc-micon"><i class="ti ti-truck"></i></span>
+              <span class="pc-mtext">Nguyên liệu</span>
+            </a>
+          </li>
+          <li class="pc-item">
             <a asp-controller="Products" asp-action="Index" class="pc-link">
               <span class="pc-micon"><i class="ti ti-box"></i></span>
               <span class="pc-mtext">Sản phẩm</span>
             </a>
           </li>
           <li class="pc-item">
-            <a asp-controller="Orders" asp-action="Index" class="pc-link">
+            <a asp-controller="PurchaseOrder" asp-action="Index" class="pc-link">
               <span class="pc-micon"><i class="ti ti-shopping-cart"></i></span>
               <span class="pc-mtext">Đơn hàng</span>
+            </a>
+          </li>
+          <li class="pc-item">
+            <a asp-controller="Warehouse" asp-action="Index" class="pc-link">
+              <span class="pc-micon"><i class="ti ti-package"></i></span>
+              <span class="pc-mtext">Kho</span>
             </a>
           </li>
         </ul>
